--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.0",
     "react-scripts": "5.0.1",
+    "react-scroll-to-top": "^3.0.0",
+    "react-scroll-trigger": "^0.6.14",
     "react-slick": "^0.29.0",
     "sass": "^1.62.1",
     "slick-carousel": "^1.8.1",
