--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-slick": "^0.29.0",
     "sass": "^1.62.1",
     "slick-carousel": "^1.8.1",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
